--- a/simple_page/package.json
+++ b/simple_page/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "normalize.css": "^8.0.1"
   }
 }
